// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
<HeaderBody>
  <HeaderTitle>
    PidPod
  </HeaderTitle>
  <AddPodcast>
    <Input
      onChange={[Function]}
      placeholder="Add RSS Feed"
      type="text"
      value=""
    />
    <Button
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      +
    </Button>
  </AddPodcast>
</HeaderBody>
`;

exports[`<Header /> should call the prop function with input state on button click 1`] = `
<HeaderBody>
  <HeaderTitle>
    PidPod
  </HeaderTitle>
  <AddPodcast>
    <Input
      onChange={[Function]}
      placeholder="Add RSS Feed"
      type="text"
      value="mockRss.com/value/rss"
    />
    <Button
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      +
    </Button>
  </AddPodcast>
</HeaderBody>
`;
